Hide local classes.