@@ -5,7 +5,8 @@ import org.junit.rules.TemporaryFolder;
 
 import java.io.IOException;
 
-import l.files.fs.local.LocalPath;
+import l.files.fs.Path;
+import l.files.fs.Paths;
 import l.files.testing.BaseTest;
 
 public abstract class PathBaseTest extends BaseTest {
@@ -13,13 +14,13 @@ public abstract class PathBaseTest extends BaseTest {
     @Rule
     public final TemporaryFolder folder = new TemporaryFolder();
 
-    LocalPath dir1;
-    LocalPath dir2;
+    Path dir1;
+    Path dir2;
 
-    protected LocalPath dir1() {
+    protected Path dir1() {
         if (dir1 == null) {
             try {
-                dir1 = LocalPath.of(folder.newFolder());
+                dir1 = Paths.get(folder.newFolder());
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
@@ -27,10 +28,10 @@ public abstract class PathBaseTest extends BaseTest {
         return dir1;
     }
 
-    protected LocalPath dir2() {
+    protected Path dir2() {
         if (dir2 == null) {
             try {
-                dir2 = LocalPath.of(folder.newFolder());
+                dir2 = Paths.get(folder.newFolder());
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
